<resources>
    <string name="app_name">Real Estate Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">1657048574597522</string>
</resources>
