<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:text="Logout"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:onClick="onLogoutClick"
        android:clickable="true"/>
</LinearLayout>
