<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <com.facebook.login.widget.LoginButton
        android:layout_below="@+id/image"
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>